[gd_scene load_steps=13 format=2]

[ext_resource path="res://interface/screens/inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://interface/screens/inventory/inventory_screen_mockup.png" type="Texture" id=2]
[ext_resource path="res://interface/screens/inventory/inventory_green_theme.tres" type="Theme" id=3]
[ext_resource path="res://interface/screens/inventory/display/health/HealthDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/screens/inventory/display/equipment/EquipmentDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/screens/inventory/command_window.png" type="Texture" id=6]
[ext_resource path="res://interface/screens/inventory/item/item_background.png" type="Texture" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 23 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 56, 20 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="Animation" id=4]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0, 4 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[node name="Inventory" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mockup" type="Sprite" parent="."]
visible = false
position = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
editor/display_folded = true
margin_left = 4.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
margin_right = 56.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="PrimaryContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 38.0

[node name="LeftContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/PrimaryContainer"]
margin_right = 20.0
margin_bottom = 38.0

[node name="HealthDisplay" parent="MarginContainer/PanelContainer/VBoxContainer/PrimaryContainer/LeftContainer" instance=ExtResource( 4 )]

[node name="EquipmentDisplay" parent="MarginContainer/PanelContainer/VBoxContainer/PrimaryContainer/LeftContainer" instance=ExtResource( 5 )]

[node name="AcceptDialog" type="AcceptDialog" parent="MarginContainer/PanelContainer/VBoxContainer/PrimaryContainer/LeftContainer"]
margin_top = 42.0
margin_right = 69.0
margin_bottom = 82.0

[node name="RightContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/PrimaryContainer"]
margin_left = 24.0
margin_right = 56.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="CommandBox" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer/PrimaryContainer/RightContainer"]
margin_right = 32.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/PrimaryContainer/RightContainer/CommandBox"]
margin_left = 2.0
margin_top = 2.0
margin_right = 30.0
margin_bottom = 36.0

[node name="SecondaryContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 56.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer/SecondaryContainer"]
margin_right = 56.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/VBoxContainer/SecondaryContainer/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 54.0
margin_bottom = 12.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/SecondaryContainer/PanelContainer/ScrollContainer"]
margin_right = 52.0
size_flags_horizontal = 3
custom_constants/separation = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 4 )
anims/open = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}
